--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,23 @@
-# banks
-Arquivo seed contendo todas os bancos brasileiros
+== Código Rails para Popular Bancos Brasileiros
+
+É um código simples mas chato de se fazer. O que eu fiz foi só organizar um código (pra ser usado em um seed do Rails) pra popular a tabela de banco
+
+Quem achar algum erro de português ou banco faltando, por favor me sinalize para que outras pessoas possam ter acesso ao arquivo corrigido.
+
+== Uso
+
+Simplesmente copie o conteúdo do arquivo "br_banks.rb" e cole no Seed.rb (ou em outro arquivo) de sua aplicação. Uma outra sugestão é incluir em um arquivo Thor na pasta /lib/tasks do seu projeto Rails.
+
+Eu estou usando a tabelas de Banco
+  ________________  
+ |    Regions     | 
+ |----------------| 
+ | codigo:string  | 
+ | nome:string    | 
+  ----------------  
+                    
+O loop de inserção das cidades está bem curtinho, então caso sua estrutura seja diferente da minha, é fácil alterar.
+
+    banks.each do |bank|
+      bank = Bank.create_with(codigo: bank["codigo"], nome: bank["nome"]).find_or_create_by(nome: bank["nome"])
+    end
